--- a/D05 NumPy 統計函式 Universal Functions (ufunc)/範例程式.ipynb
+++ b/D05 NumPy 統計函式 Universal Functions (ufunc)/範例程式.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "vd0BSC1nFHG_"
    },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "id": "E6QeGmPAFHHQ",
     "outputId": "9978587a-d7ee-4858-c49f-cb36ad0487a2"
@@ -761,13 +761,14 @@
        "       [4, 5]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.arange(6).reshape((3,2))\n",
+    "\n",
     "a"
    ]
   },
@@ -780,6 +781,26 @@
     "權重平均值的計算公式為：\n",
     "\n",
     "> avg = sum(a * weights) / sum(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(a)"
    ]
   },
   {
