--- a/D2：Numpy 陣列中不同的資料型態/02 Homework_維元.ipynb
+++ b/D2：Numpy 陣列中不同的資料型態/02 Homework_維元.ipynb
@@ -56,26 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "id": "5QrYoyNWsvFS",
     "outputId": "8977bda1-0e79-4faa-8370-76a2b0767482"
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nYour Code\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-200ba1e19c3c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#type(a) 用於變數的型態，會回傳一個陣列\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'type(a): '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#a.dtype array元素當中真正的型態\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a.dtype: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "#type(a) 用於變數的型態，會回傳一個陣列\n",
+    "print('type(a): ', type(a))\n",
+    "#a.dtype array元素當中真正的型態\n",
+    "print('a.dtype: ', a.dtype)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "e1gVI0tvsvFY"
    },
@@ -97,28 +102,27 @@
    "source": [
     "# 記得先 Import 正確的套件\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "ew2BtKF2NgfL"
    },
    "outputs": [],
    "source": [
     "def is_dtype(a, t):\n",
-    "    '''\n",
-    "    Your Code\n",
-    "    '''"
+    "    if a.dtype is np.dtype(t):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "sGs__HXnNgfL",
     "outputId": "6230ab6b-ea54-4102-ebae-5202b9f4826d"
@@ -128,8 +132,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n",
+      "True\n",
+      "True\n",
       "True\n"
      ]
     }
@@ -174,7 +178,9 @@
     "id": "INXaaXTuNgfM"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#type()是檢查變數的型態, 而不是元素的型態, is相對==更嚴格, 一定要型態正確才會回傳 True\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -201,7 +207,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
