--- a/D3：Numpy 陣列的初始化/03 Homework_維元.ipynb
+++ b/D3：Numpy 陣列的初始化/03 Homework_維元.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -52,20 +52,22 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nYour Code\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "import numpy as np\n",
+    "#建立由 0 組成的 2x3 陣列\n",
+    "print(np.zeros((2, 3)))\n",
+    "#建立一個2x3 陣列，但裡面的元素不保證為0\n",
+    "print(np.empty((2, 3)))"
    ]
   },
   {
@@ -79,7 +81,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nYour Code\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 記得先 Import 正確的套件\n",
     "\n",
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -101,12 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[26.59948885 47.53904807 54.11469174]\n",
-      " [70.68669942  6.86886691  4.57672874]]\n",
-      "[[27. 48. 54.]\n",
-      " [71.  7.  5.]]\n",
-      "[[27. 48. 54.]\n",
-      " [71.  7.  5.]]\n"
+      "[[1. 0. 1.]\n",
+      " [1. 1. 1.]]\n"
      ]
     }
    ],
@@ -115,9 +124,7 @@
     "\n",
     "a = np.random.rand(2, 3)\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "print(a.round())"
    ]
   },
   {
@@ -129,15 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[34. 33. 38.]\n",
-      " [39. 23. 20.]]\n"
+      "[31. 30. 22.]\n"
      ]
     }
    ],
@@ -145,9 +151,10 @@
     "m = 20\n",
     "n = 40\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "a = np.random.rand(3) * (n-m)\n",
+    "b = a\n",
+    "\n",
+    "print((a-b % 1) + m)"
    ]
   },
   {
@@ -171,7 +178,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
