--- a/D4：NumPy 陣列的算術運算/04 Homework_維元.ipynb
+++ b/D4：NumPy 陣列的算術運算/04 Homework_維元.ipynb
@@ -51,19 +51,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array( [20,30,40,50] )\n",
+    "b = np.array( [1,2,3,4] ) \n",
+    "c = 1\n",
+    "d = np.array( [1] )\n",
+    "e = np.array( [1,2] ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "5QrYoyNWsvFS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 40  60  80 100]\n",
+      "[21 32 43 54]\n",
+      "[21 31 41 51]\n",
+      "[21 31 41 51]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (4,) (2,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-2290c274a189>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,) (2,) "
+     ]
+    }
+   ],
    "source": [
-    "print(a + a)\n",
-    "print(a + b)\n",
-    "print(a + c)\n",
-    "print(a + d)\n",
-    "print(a + e)"
+    "print(a + a)#[ 40  60  80 100]\n",
+    "print(a + b)# [21 32 43 54]\n",
+    "print(a + c)#[21 31 41 51]\n",
+    "print(a + d)# [21 31 41 51]\n",
+    "print(a + e)#error,維度不一樣不能廣播"
    ]
   },
   {
@@ -86,6 +122,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.ones(3)*1\n",
+    "B = np.ones(3)*2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -98,12 +145,30 @@
     }
    ],
    "source": [
-    "A = np.ones(3)*1\n",
-    "B = np.ones(3)*2\n",
-    "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "#不用迴圈\n",
+    "print((A+B)*(-A/2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.5, -1.5, -1.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#用迴圈\n",
+    "res=[]\n",
+    "for a,b in zip(A,B):\n",
+    "    res.append((a+b)*(-a/2))\n",
+    "print(res)\n",
+    "    "
    ]
   },
   {
@@ -115,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -140,9 +205,8 @@
     "A = np.ones((1,6))\n",
     "B = np.ones((6,1))\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "print(A * B)\n",
+    "print(A @ B)"
    ]
   },
   {
@@ -231,7 +295,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
