--- a/D5：NumPy 陣列的邏輯運算/05 Homework_維元.ipynb
+++ b/D5：NumPy 陣列的邏輯運算/05 Homework_維元.ipynb
@@ -34,20 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 記得先 Import 正確的套件\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -55,17 +53,21 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2 -3 -4 -5 -6 -7  8  9 10]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2, -3, -4, -5, -6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "\n",
+    "a = np.arange(11)\n",
+    "a[(a >= 3) & (a < 7)] *= -1\n",
+    "a"
    ]
   },
   {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -89,16 +91,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "[[0.1172682  0.16749881 0.94387921 0.15239523 0.11089507 0.04652932]\n",
+      " [0.34749019 0.48977086 0.50070998 0.44857207 0.06853309 0.48410774]\n",
+      " [0.29673097 0.82735859 0.45279568 0.37905699 0.91178356 0.0053803 ]]\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "A = np.random.rand(3, 6)\n",
-    "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "print(A)\n",
+    "print(len(A[A>0.5]))"
    ]
   },
   {
@@ -136,7 +139,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
