--- a/D7：NumPy 陣列的索引、切片和迭代/07 Homework_維元.ipynb
+++ b/D7：NumPy 陣列的索引、切片和迭代/07 Homework_維元.ipynb
@@ -37,20 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 記得先 Import 正確的套件\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -63,49 +61,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.4 ns ± 17.4 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "30 ns ± 16.9 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit -n 10 a = 2\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "for i in Z:\n",
+    "    for j in i:\n",
+    "        for k in j:\n",
+    "            k = k+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 ns ± 20.7 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 a = 2\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "for d in Z.flat:\n",
+    "    d=d+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84.3 ns ± 12.9 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit -n 10 a = 2\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "for d in np.nditer(Z):\n",
+    "    d=d+1"
    ]
   },
   {
@@ -117,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -128,8 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8 2 0 7 1 8 1 6 3 8 8 8 8 4 5 7 5 6 8 4 0 4 8 9 0 3 1 4 6 9 9 4 4 6 6 2 4\n",
-      " 6 8 8 3 8 2 3 5 5 1 8 3 8]\n"
+      "[7 1 0 4 6 3 4 6 4 8 1 4 2 9 9 7 9 9 2 1 7 5 2 5 8 8 9 4 5 7 4 5 0 7 4 6 9\n",
+      " 3 2 0 5 9 5 9 8 6 8 0 6 5]\n"
      ]
     }
    ],
@@ -141,46 +154,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "9"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "d = np.argmax(np.bincount(Z))\n",
+    "d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0,  5,  9, 10, 11, 12, 18, 22, 38, 39, 41, 47, 49])"
+       "13"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "list(Z).index(d)\n"
    ]
   },
   {
@@ -192,9 +202,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 4, 6, 8, 6, 7]\n",
+      "[6, 4, 6, 8, 6, 7]\n",
+      "[[6, 5, 6, 5], [0, 7, 5, 2], [8, 4, 8, 6]]\n",
+      "[array([6, 5, 6, 5]), array([0, 7, 5, 2]), array([8, 4, 8, 6])]\n",
+      "[[[1, 1], [5, 3], [0, 8]], [[1, 2], [1, 0], [1, 4]]]\n",
+      "[array([[1, 1],\n",
+      "       [5, 3],\n",
+      "       [0, 8]]), array([[1, 2],\n",
+      "       [1, 0],\n",
+      "       [1, 4]])]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.random.randint(10, size=6) \n",
     "\n",
@@ -216,14 +243,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 4, 6, 8, 6, 7]\n",
+      "[[6, 5, 6, 5], [0, 7, 5, 2], [8, 4, 8, 6]]\n",
+      "[[[1, 1], [5, 3], [0, 8]], [[1, 2], [1, 0], [1, 4]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tolist(iterable):\n",
+    "    if type(iterable) != np.ndarray:\n",
+    "        return iterable\n",
+    "    return [tolist(obj) for obj in iterable]\n",
+    "\n",
+    "print(tolist(a))\n",
+    "print(tolist(b))\n",
+    "print(tolist(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -232,7 +281,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
