--- a/D8：Pandas 物件的定義與屬性/08 Homework_維元.ipynb
+++ b/D8：Pandas 物件的定義與屬性/08 Homework_維元.ipynb
@@ -56,7 +56,10 @@
    "source": [
     "'''\n",
     "Your Code \n",
-    "'''"
+    "'''\n",
+    "提供了快速高效的 DataFrame 結構（底層使用 Cython 或 C 的實作對效能進行高度優化）\n",
+    "廣泛地在學術傑與商業領域中使用，包括金融，神經科學，經濟學，統計學，廣告，Web分析等。\n",
+    "對於資料格式有高度的銜接性，包含 CSV、Excel 或資料庫（SQL）皆能提供彈性的讀寫工具"
    ]
   },
   {
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -204,7 +207,7 @@
        "9   France  37.0  67000.0       Yes"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,13 +219,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 4)\n",
+      "40\n",
+      "[['France' 44.0 72000.0 'No']\n",
+      " ['Spain' 27.0 48000.0 'Yes']\n",
+      " ['Germany' 30.0 54000.0 'No']\n",
+      " ['Spain' 38.0 61000.0 'No']\n",
+      " ['Germany' 40.0 nan 'Yes']\n",
+      " ['France' 35.0 58000.0 'Yes']\n",
+      " ['Spain' nan 52000.0 'No']\n",
+      " ['France' 48.0 79000.0 'Yes']\n",
+      " ['Germany' 50.0 83000.0 'No']\n",
+      " ['France' 37.0 67000.0 'Yes']]\n",
+      "RangeIndex(start=0, stop=10, step=1)\n",
+      "Index(['Country', 'Age', 'Salary', 'Purchased'], dtype='object')\n",
+      "Country       object\n",
+      "Age          float64\n",
+      "Salary       float64\n",
+      "Purchased     object\n",
+      "dtype: object\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
+    "# （屬性：shape、size、values、index、columns、dtypes、len）\n",
     "'''\n",
     "Your Code \n",
-    "'''"
+    "'''\n",
+    "print(df.shape)\n",
+    "print(df.size)\n",
+    "print(df.values)\n",
+    "print(df.index)\n",
+    "print(df.columns)\n",
+    "print(df.dtypes)\n",
+    "print(len(df))\n",
+    "\n"
    ]
   },
   {
@@ -239,7 +278,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
