--- a/D9：使用 Pandas DataFrame 的初始化/09 Homework_維元.ipynb
+++ b/D9：使用 Pandas DataFrame 的初始化/09 Homework_維元.ipynb
@@ -72,12 +72,77 @@
     "\n",
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017 Sales</th>\n",
+       "      <td>30</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018 Sales</th>\n",
+       "      <td>21</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0   1\n",
+       "2017 Sales  30  41\n",
+       "2018 Sales  21  34"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Your Code\n",
+    "'''\n",
+    "df = pd.DataFrame([[30, 41],[21, 34]], index=['2017 Sales', '2018 Sales'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -85,15 +150,54 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Apples  Bananas\n",
-      "0      30       21\n",
-      "            Apples  Bananas\n",
-      "2017 Sales      30       21\n",
-      "2018 Sales      41       34\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Apples</th>\n",
+       "      <th>Bananas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Apples  Bananas\n",
+       "0      30       21\n",
+       "1      41       34"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -120,24 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "e1gVI0tvsvFY"
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     city  visitor weekday\n",
-      "0  Austin      139     Sun\n",
-      "1  Dallas      237     Sun\n",
-      "2  Austin      139     Mon\n",
-      "3  Dallas      456     Mon\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -160,7 +253,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>city</th>\n",
-       "      <th>visitor</th>\n",
+       "      <th>vistor</th>\n",
        "      <th>weekday</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -180,7 +273,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Austin</td>\n",
-       "      <td>139</td>\n",
+       "      <td>326</td>\n",
        "      <td>Mon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -194,14 +287,14 @@
        "</div>"
       ],
       "text/plain": [
-       "     city  visitor weekday\n",
-       "0  Austin      139     Sun\n",
-       "1  Dallas      237     Sun\n",
-       "2  Austin      139     Mon\n",
-       "3  Dallas      456     Mon"
+       "     city  vistor weekday\n",
+       "0  Austin     139     Sun\n",
+       "1  Dallas     237     Sun\n",
+       "2  Austin     326     Mon\n",
+       "3  Dallas     456     Mon"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +302,12 @@
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "df = pd.DataFrame([['Austin', 139, 'Sun'], ['Dallas', 237, 'Sun'],\n",
+    "                   ['Austin', 326, 'Mon'], ['Dallas', 456, 'Mon']],\n",
+    "                   columns=['city', 'vistor', 'weekday'])\n",
+    "df\n",
+    "            "
    ]
   },
   {
@@ -221,22 +319,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sun 188.0\n",
-      "Mon 297.5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.sort_values of          vistor\n",
+       "weekday        \n",
+       "Mon       391.0\n",
+       "Sun       188.0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "df.groupby('weekday').agg('mean')"
    ]
   },
   {
@@ -260,7 +364,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
