--- a/D10：Pandas DataFrame 的資料選取/10 Homework維元.ipynb
+++ b/D10：Pandas DataFrame 的資料選取/10 Homework維元.ipynb
@@ -77,7 +77,11 @@
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "df.loc[ '2013-01-01', 'A'] # 選取 row : 20130101, columns: A的資料\n",
+    "df.loc[ '2013-01-01', ['A', 'B'] ] # 選取 row : 20130101, columns: A, B 的資料\n",
+    "df.loc[ '2013-01-01':'2013-01-02', 'A' ] # 選取 row : 20130101-20130102, columns: A的資料\n",
+    "df.loc[ '2013-01-01':'2013-01-05', 'A':'C'] # 選取 row : 20130101-20130105, columns: A-C的資料"
    ]
   },
   {
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +108,14 @@
     "\n",
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -145,39 +151,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.824286</td>\n",
-       "      <td>0.264754</td>\n",
-       "      <td>-0.887365</td>\n",
+       "      <td>0.491725</td>\n",
+       "      <td>-0.781313</td>\n",
+       "      <td>1.030794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1.044179</td>\n",
-       "      <td>0.151320</td>\n",
-       "      <td>-0.975283</td>\n",
+       "      <td>-0.287712</td>\n",
+       "      <td>2.265070</td>\n",
+       "      <td>1.254125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1.812146</td>\n",
-       "      <td>0.995687</td>\n",
-       "      <td>2.556824</td>\n",
+       "      <td>-0.234650</td>\n",
+       "      <td>0.988644</td>\n",
+       "      <td>1.189509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.746811</td>\n",
-       "      <td>0.183326</td>\n",
-       "      <td>-1.529704</td>\n",
+       "      <td>0.929099</td>\n",
+       "      <td>-0.007033</td>\n",
+       "      <td>-0.560213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.992052</td>\n",
-       "      <td>1.578329</td>\n",
-       "      <td>-0.858061</td>\n",
+       "      <td>-0.512282</td>\n",
+       "      <td>0.678199</td>\n",
+       "      <td>0.607659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.387535</td>\n",
-       "      <td>0.339512</td>\n",
-       "      <td>0.714364</td>\n",
+       "      <td>0.003653</td>\n",
+       "      <td>-0.181081</td>\n",
+       "      <td>-0.764344</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -185,15 +191,15 @@
       ],
       "text/plain": [
        "       col1      col2      col3\n",
-       "0  0.824286  0.264754 -0.887365\n",
-       "1 -1.044179  0.151320 -0.975283\n",
-       "2 -1.812146  0.995687  2.556824\n",
-       "3  1.746811  0.183326 -1.529704\n",
-       "4  0.992052  1.578329 -0.858061\n",
-       "5  0.387535  0.339512  0.714364"
+       "0  0.491725 -0.781313  1.030794\n",
+       "1 -0.287712  2.265070  1.254125\n",
+       "2 -0.234650  0.988644  1.189509\n",
+       "3  0.929099 -0.007033 -0.560213\n",
+       "4 -0.512282  0.678199  0.607659\n",
+       "5  0.003653 -0.181081 -0.764344"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,88 +211,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>col1</th>\n",
-       "      <th>col3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.824286</td>\n",
-       "      <td>-0.887365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.044179</td>\n",
-       "      <td>-0.975283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.812146</td>\n",
-       "      <td>2.556824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.746811</td>\n",
-       "      <td>-1.529704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.992052</td>\n",
-       "      <td>-0.858061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.387535</td>\n",
-       "      <td>0.714364</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       col1      col3\n",
-       "0  0.824286 -0.887365\n",
-       "1 -1.044179 -0.975283\n",
-       "2 -1.812146  2.556824\n",
-       "3  1.746811 -1.529704\n",
-       "4  0.992052 -0.858061\n",
-       "5  0.387535  0.714364"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0   1   2   3\n",
+      "0  12  21  29  18\n",
+      "1  31  33  11  31\n",
+      "2  14  23  37  30\n",
+      "    0   1   2   3\n",
+      "1  31  33  11  31\n",
+      "3  21  38  16  38\n",
+      "5  15  36  13  28\n",
+      "     0   1   2   3\n",
+      "13  30  32  16  22\n",
+      "14  24  16  16  20\n",
+      "     0   2\n",
+      "0   12  29\n",
+      "1   31  11\n",
+      "2   14  37\n",
+      "3   21  16\n",
+      "4   24  17\n",
+      "5   15  13\n",
+      "6   13  21\n",
+      "7   10  26\n",
+      "8   39  30\n",
+      "9   32  28\n",
+      "10  15  21\n",
+      "11  18  38\n",
+      "12  39  38\n",
+      "13  30  16\n",
+      "14  24  16\n"
+     ]
     }
    ],
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "# - select the first 3 rows.\n",
+    "print(df.head(3))\n",
+    "# - select the odd rows. (index = 1, 3, 5)\n",
+    "print(df.iloc[[1, 3, 5], :])\n",
+    "# - select the last 2 columns.\n",
+    "print(df.tail(2))\n",
+    "# - select the even columns. (index = 0, 2, 4)\n",
+    "print(df.iloc[:, 0::2])"
    ]
   },
   {
@@ -305,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -338,108 +311,108 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>24</td>\n",
-       "      <td>32</td>\n",
-       "      <td>33</td>\n",
-       "      <td>17</td>\n",
+       "      <td>12</td>\n",
+       "      <td>21</td>\n",
+       "      <td>29</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>37</td>\n",
-       "      <td>32</td>\n",
-       "      <td>26</td>\n",
-       "      <td>15</td>\n",
+       "      <td>31</td>\n",
+       "      <td>33</td>\n",
+       "      <td>11</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>15</td>\n",
-       "      <td>27</td>\n",
-       "      <td>21</td>\n",
-       "      <td>36</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>37</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>34</td>\n",
-       "      <td>30</td>\n",
-       "      <td>27</td>\n",
-       "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>38</td>\n",
+       "      <td>16</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>34</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>17</td>\n",
        "      <td>20</td>\n",
-       "      <td>38</td>\n",
-       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>16</td>\n",
-       "      <td>39</td>\n",
+       "      <td>15</td>\n",
+       "      <td>36</td>\n",
+       "      <td>13</td>\n",
        "      <td>28</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>39</td>\n",
-       "      <td>35</td>\n",
-       "      <td>38</td>\n",
-       "      <td>24</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>21</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>35</td>\n",
-       "      <td>19</td>\n",
-       "      <td>37</td>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>37</td>\n",
-       "      <td>32</td>\n",
+       "      <td>39</td>\n",
+       "      <td>15</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>38</td>\n",
-       "      <td>38</td>\n",
-       "      <td>38</td>\n",
-       "      <td>17</td>\n",
+       "      <td>32</td>\n",
+       "      <td>34</td>\n",
+       "      <td>28</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>21</td>\n",
        "      <td>15</td>\n",
-       "      <td>39</td>\n",
+       "      <td>31</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>25</td>\n",
-       "      <td>35</td>\n",
-       "      <td>27</td>\n",
-       "      <td>22</td>\n",
+       "      <td>18</td>\n",
+       "      <td>36</td>\n",
+       "      <td>38</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>33</td>\n",
+       "      <td>39</td>\n",
        "      <td>20</td>\n",
-       "      <td>15</td>\n",
-       "      <td>37</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>27</td>\n",
-       "      <td>29</td>\n",
-       "      <td>13</td>\n",
-       "      <td>19</td>\n",
+       "      <td>30</td>\n",
+       "      <td>32</td>\n",
+       "      <td>16</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>32</td>\n",
-       "      <td>15</td>\n",
-       "      <td>13</td>\n",
-       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -447,24 +420,24 @@
       ],
       "text/plain": [
        "     0   1   2   3\n",
-       "0   24  32  33  17\n",
-       "1   37  32  26  15\n",
-       "2   15  27  21  36\n",
-       "3   34  30  27  24\n",
-       "4   34  20  38  27\n",
-       "5   16  39  28  16\n",
-       "6   39  35  38  24\n",
-       "7   35  19  37  12\n",
-       "8   16  17  37  32\n",
-       "9   38  38  38  17\n",
-       "10  10  21  15  39\n",
-       "11  25  35  27  22\n",
-       "12  33  20  15  37\n",
-       "13  27  29  13  19\n",
-       "14  32  15  13  25"
+       "0   12  21  29  18\n",
+       "1   31  33  11  31\n",
+       "2   14  23  37  30\n",
+       "3   21  38  16  38\n",
+       "4   24  25  17  20\n",
+       "5   15  36  13  28\n",
+       "6   13  12  21  29\n",
+       "7   10  25  26  12\n",
+       "8   39  15  30  10\n",
+       "9   32  34  28  13\n",
+       "10  15  31  21  14\n",
+       "11  18  36  38  24\n",
+       "12  39  20  38  39\n",
+       "13  30  32  16  22\n",
+       "14  24  16  16  20"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +449,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0   1   2   3\n",
+      "1   31  33  11  31\n",
+      "3   21  38  16  38\n",
+      "4   24  25  17  20\n",
+      "8   39  15  30  10\n",
+      "9   32  34  28  13\n",
+      "12  39  20  38  39\n",
+      "13  30  32  16  22\n",
+      "14  24  16  16  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Your Code\n",
+    "'''\n",
+    "# - 1. filtered by first column > 20?\n",
+    "print(df[df[0] > 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0   1   2   3\n",
+      "1   31  33  11  31\n",
+      "3   21  38  16  38\n",
+      "5   15  36  13  28\n",
+      "8   39  15  30  10\n",
+      "9   32  34  28  13\n",
+      "11  18  36  38  24\n",
+      "12  39  20  38  39\n",
+      "13  30  32  16  22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# - 2. filtered by first column + second column > 50\n",
+    "print(df[(df[0] + df[1]) > 50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0   1   2   3\n",
+      "0   12  21  29  18\n",
+      "1   31  33  11  31\n",
+      "2   14  23  37  30\n",
+      "3   21  38  16  38\n",
+      "4   24  25  17  20\n",
+      "5   15  36  13  28\n",
+      "6   13  12  21  29\n",
+      "7   10  25  26  12\n",
+      "9   32  34  28  13\n",
+      "10  15  31  21  14\n",
+      "11  18  36  38  24\n",
+      "13  30  32  16  22\n",
+      "14  24  16  16  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# - 3. filtered by first column < 30 or second column > 30\n",
+    "# df.loc[:,0] < 30\n",
+    "print(df[(df[0] < 30) | (df[1] > 30)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -508,74 +568,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24</td>\n",
-       "      <td>32</td>\n",
+       "      <th>1</th>\n",
+       "      <td>31</td>\n",
        "      <td>33</td>\n",
-       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
        "      <td>37</td>\n",
-       "      <td>32</td>\n",
-       "      <td>26</td>\n",
-       "      <td>15</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>34</td>\n",
-       "      <td>30</td>\n",
-       "      <td>27</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34</td>\n",
-       "      <td>20</td>\n",
+       "      <td>21</td>\n",
        "      <td>38</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>39</td>\n",
-       "      <td>35</td>\n",
-       "      <td>38</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>35</td>\n",
-       "      <td>19</td>\n",
-       "      <td>37</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
        "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>37</td>\n",
-       "      <td>32</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>38</td>\n",
-       "      <td>38</td>\n",
-       "      <td>38</td>\n",
-       "      <td>17</td>\n",
+       "      <td>32</td>\n",
+       "      <td>34</td>\n",
+       "      <td>28</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>25</td>\n",
-       "      <td>35</td>\n",
-       "      <td>27</td>\n",
-       "      <td>22</td>\n",
+       "      <td>18</td>\n",
+       "      <td>36</td>\n",
+       "      <td>38</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>33</td>\n",
+       "      <td>39</td>\n",
        "      <td>20</td>\n",
-       "      <td>15</td>\n",
-       "      <td>37</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -583,42 +615,23 @@
       ],
       "text/plain": [
        "     0   1   2   3\n",
-       "0   24  32  33  17\n",
-       "1   37  32  26  15\n",
-       "3   34  30  27  24\n",
-       "4   34  20  38  27\n",
-       "6   39  35  38  24\n",
-       "7   35  19  37  12\n",
-       "8   16  17  37  32\n",
-       "9   38  38  38  17\n",
-       "11  25  35  27  22\n",
-       "12  33  20  15  37"
+       "1   31  33  11  31\n",
+       "2   14  23  37  30\n",
+       "3   21  38  16  38\n",
+       "9   32  34  28  13\n",
+       "11  18  36  38  24\n",
+       "12  39  20  38  39"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "# - 4. filtered by total sum of row > 100\n",
+    "df[df.apply(np.sum, axis=1) > 100]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -634,7 +647,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -648,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
