--- a/D11：Pandas 中的算術運算特性/11 Homework維元.ipynb
+++ b/D11：Pandas 中的算術運算特性/11 Homework維元.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,19 @@
     "\n",
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "5QrYoyNWsvFS"
+    "id": "5QrYoyNWsvFS",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -196,7 +199,7 @@
        "j    dog  3.0       1       no"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,13 +219,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a     True\n",
+       "b     True\n",
+       "c    False\n",
+       "d     True\n",
+       "e    False\n",
+       "f    False\n",
+       "g    False\n",
+       "h     True\n",
+       "i    False\n",
+       "j    False\n",
+       "Name: priority, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.priority.map({\"yes\":'True', \"no\":'False'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal</th>\n",
+       "      <th>age</th>\n",
+       "      <th>visits</th>\n",
+       "      <th>priority</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>j</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animal  age  visits priority\n",
+       "a    cat  2.5       1     True\n",
+       "b    cat  3.0       3     True\n",
+       "c  snake  0.5       2    False\n",
+       "d    dog  NaN       3     True\n",
+       "e    dog  5.0       2    False\n",
+       "f    cat  2.0       3    False\n",
+       "g  snake  4.5       1    False\n",
+       "h    cat  NaN       1     True\n",
+       "i    dog  7.0       2    False\n",
+       "j    dog  3.0       1    False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "# - 計算每個不同種類 animal 的 age 的平均數\n",
+    "df.groupby('animal').mean()\n",
+    "# - 計算每個不同種類 animal 的 age 的平均數\n",
+    "# - 將資料依照 Age 欄位由小到大排序，再依照 visits 欄位由大到小排序\n",
+    "df.sort_values(by=['age', 'visits'])\n",
+    "# - 將 priority 欄位中的 yes 和 no 字串，換成是布林值 的 True 和 False\n",
+    "df['priority'] = df.priority.map({\"yes\":'True', \"no\":'False'})\n",
+    "df"
    ]
   },
   {
@@ -237,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -273,33 +435,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.763566</td>\n",
-       "      <td>0.846747</td>\n",
-       "      <td>0.885887</td>\n",
+       "      <td>0.458122</td>\n",
+       "      <td>0.368018</td>\n",
+       "      <td>0.610631</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.782180</td>\n",
-       "      <td>0.006052</td>\n",
-       "      <td>0.844430</td>\n",
+       "      <td>0.607377</td>\n",
+       "      <td>0.798913</td>\n",
+       "      <td>0.864841</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.547830</td>\n",
-       "      <td>0.603736</td>\n",
-       "      <td>0.106965</td>\n",
+       "      <td>0.039041</td>\n",
+       "      <td>0.300979</td>\n",
+       "      <td>0.281196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.763000</td>\n",
-       "      <td>0.586530</td>\n",
-       "      <td>0.882552</td>\n",
+       "      <td>0.491057</td>\n",
+       "      <td>0.156899</td>\n",
+       "      <td>0.174550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.311204</td>\n",
-       "      <td>0.609405</td>\n",
-       "      <td>0.915406</td>\n",
+       "      <td>0.448029</td>\n",
+       "      <td>0.556891</td>\n",
+       "      <td>0.980821</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -307,14 +469,14 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.763566  0.846747  0.885887\n",
-       "1  0.782180  0.006052  0.844430\n",
-       "2  0.547830  0.603736  0.106965\n",
-       "3  0.763000  0.586530  0.882552\n",
-       "4  0.311204  0.609405  0.915406"
+       "0  0.458122  0.368018  0.610631\n",
+       "1  0.607377  0.798913  0.864841\n",
+       "2  0.039041  0.300979  0.281196\n",
+       "3  0.491057  0.156899  0.174550\n",
+       "4  0.448029  0.556891  0.980821"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,9 +488,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0.408725\n",
+      "1    0.436340\n",
+      "2    0.582408\n",
+      "dtype: float64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -358,33 +530,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.130010</td>\n",
-       "      <td>0.316253</td>\n",
-       "      <td>0.158839</td>\n",
+       "      <td>0.049397</td>\n",
+       "      <td>-0.068322</td>\n",
+       "      <td>0.028223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.148624</td>\n",
-       "      <td>-0.524442</td>\n",
-       "      <td>0.117382</td>\n",
+       "      <td>0.198652</td>\n",
+       "      <td>0.362573</td>\n",
+       "      <td>0.282433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.085726</td>\n",
-       "      <td>0.073242</td>\n",
-       "      <td>-0.620083</td>\n",
+       "      <td>-0.369685</td>\n",
+       "      <td>-0.135361</td>\n",
+       "      <td>-0.301212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.129444</td>\n",
-       "      <td>0.056036</td>\n",
-       "      <td>0.155504</td>\n",
+       "      <td>0.082332</td>\n",
+       "      <td>-0.279441</td>\n",
+       "      <td>-0.407858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.322352</td>\n",
-       "      <td>0.078911</td>\n",
-       "      <td>0.188358</td>\n",
+       "      <td>0.039304</td>\n",
+       "      <td>0.120551</td>\n",
+       "      <td>0.398414</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,14 +564,14 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.130010  0.316253  0.158839\n",
-       "1  0.148624 -0.524442  0.117382\n",
-       "2 -0.085726  0.073242 -0.620083\n",
-       "3  0.129444  0.056036  0.155504\n",
-       "4 -0.322352  0.078911  0.188358"
+       "0  0.049397 -0.068322  0.028223\n",
+       "1  0.198652  0.362573  0.282433\n",
+       "2 -0.369685 -0.135361 -0.301212\n",
+       "3  0.082332 -0.279441 -0.407858\n",
+       "4  0.039304  0.120551  0.398414"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,12 +579,15 @@
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "print(df.mean(axis=0))\n",
+    "df1 = df.sub(df.mean(axis=0))\n",
+    "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -444,33 +619,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.068501</td>\n",
-       "      <td>0.014680</td>\n",
-       "      <td>0.053821</td>\n",
+       "      <td>-0.020802</td>\n",
+       "      <td>-0.110906</td>\n",
+       "      <td>0.131707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.237960</td>\n",
-       "      <td>-0.538169</td>\n",
-       "      <td>0.300209</td>\n",
+       "      <td>-0.149666</td>\n",
+       "      <td>0.041869</td>\n",
+       "      <td>0.107797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.128320</td>\n",
-       "      <td>0.184225</td>\n",
-       "      <td>-0.312545</td>\n",
+       "      <td>-0.168031</td>\n",
+       "      <td>0.093907</td>\n",
+       "      <td>0.074124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.018972</td>\n",
-       "      <td>-0.157497</td>\n",
-       "      <td>0.138525</td>\n",
+       "      <td>0.216889</td>\n",
+       "      <td>-0.117270</td>\n",
+       "      <td>-0.099619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.300801</td>\n",
-       "      <td>-0.002600</td>\n",
-       "      <td>0.303401</td>\n",
+       "      <td>-0.213885</td>\n",
+       "      <td>-0.105022</td>\n",
+       "      <td>0.318908</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -478,14 +653,14 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0 -0.068501  0.014680  0.053821\n",
-       "1  0.237960 -0.538169  0.300209\n",
-       "2  0.128320  0.184225 -0.312545\n",
-       "3  0.018972 -0.157497  0.138525\n",
-       "4 -0.300801 -0.002600  0.303401"
+       "0 -0.020802 -0.110906  0.131707\n",
+       "1 -0.149666  0.041869  0.107797\n",
+       "2 -0.168031  0.093907  0.074124\n",
+       "3  0.216889 -0.117270 -0.099619\n",
+       "4 -0.213885 -0.105022  0.318908"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +668,8 @@
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "df.sub(df.mean(axis=1), axis=0)\n"
    ]
   },
   {
@@ -509,142 +685,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.763566</td>\n",
-       "      <td>0.846747</td>\n",
-       "      <td>0.885887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.782180</td>\n",
-       "      <td>0.006052</td>\n",
-       "      <td>0.844430</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.547830</td>\n",
-       "      <td>0.603736</td>\n",
-       "      <td>0.106965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.763000</td>\n",
-       "      <td>0.586530</td>\n",
-       "      <td>0.882552</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.311204</td>\n",
-       "      <td>0.609405</td>\n",
-       "      <td>0.915406</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          0         1         2\n",
-       "0  0.763566  0.846747  0.885887\n",
-       "1  0.782180  0.006052  0.844430\n",
-       "2  0.547830  0.603736  0.106965\n",
-       "3  0.763000  0.586530  0.882552\n",
-       "4  0.311204  0.609405  0.915406"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wei/.virtualenvs/py3/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: 'argmax' is deprecated, use 'idxmax' instead. The behavior of 'argmax'\n",
-      "will be corrected to return the positional maximum in the future.\n",
-      "Use 'series.values.argmax' to get the position of the maximum now.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wei/.virtualenvs/py3/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: 'argmax' is deprecated, use 'idxmax' instead. The behavior of 'argmax'\n",
-      "will be corrected to return the positional maximum in the future.\n",
-      "Use 'series.values.argmax' to get the position of the maximum now.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sum().argmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +722,31 @@
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "df.sum(axis=0).argmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Your Code\n",
+    "'''\n",
+    "df.sum(axis=1).argmin()"
    ]
   },
   {
@@ -697,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
