--- a/D12：Pandas 迭代與重複操作/12 Homework維元.ipynb
+++ b/D12：Pandas 迭代與重複操作/12 Homework維元.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,9 @@
     "\n",
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -168,7 +170,7 @@
        "j    dog  3.0       1       no"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,70 +189,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>animal</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>i</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  animal  age\n",
-       "d    dog  NaN\n",
-       "e    dog  5.0\n",
-       "i    dog  7.0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animal      dog\n",
+      "age         NaN\n",
+      "visits        3\n",
+      "priority    yes\n",
+      "Name: d, dtype: object\n",
+      "animal      dog\n",
+      "age         5.0\n",
+      "visits        2\n",
+      "priority     no\n",
+      "Name: e, dtype: object\n",
+      "animal      dog\n",
+      "age         7.0\n",
+      "visits        2\n",
+      "priority     no\n",
+      "Name: i, dtype: object\n"
+     ]
     }
    ],
    "source": [
+    "# 根據給定的 DataFrame 中取出索引為 3, 4, 8 的 animal 和 age 欄位。\n",
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "for i in range(len(df)):\n",
+    "    if i in [3, 4, 8]:\n",
+    "        print(df.iloc[i])\n"
    ]
   },
   {
@@ -263,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -319,7 +291,7 @@
        "1  bob  alice  john"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +358,7 @@
        "1  Bob  Alice  John"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +366,8 @@
    "source": [
     "'''\n",
     "Your Code\n",
-    "'''"
+    "'''\n",
+    "df.applymap(lambda x: x.title())"
    ]
   },
   {
@@ -439,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
